@@ -1,6 +1,7 @@
 Updates in v0.7.6
 UTILS:
 1. Added smooth functions for 1d, 2d, and 3d grids.
+2. Added matrix_in_polygon to extract 2d or 3d values within a polygon.
 
 =================================================================
 Updates in v0.7.5
